--- a/plant.html
+++ b/plant.html
@@ -4,17 +4,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather Dashboard</title>
+    <title>Grow you Garden</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <!-- <link rel="stylesheet" href=".assets/plant.css" > -->
 
 </head>
 
 <body>
+    <header>
+        <h1>Finding a Job is hard... why not make it fun?</h1>
+
+    </header>
+    <div id = "job-options">
+        <div class="card column is-3">
+            <div class="card-image">
+                <figure class="image is-4by3">
+                    <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                </figure>
+            </div>
+            <div class="card-content">
+                <div class="media">
+
+                    <div class="media-content">
+                        <h3 class="title is-4 has-text-centered">Job Title</h3>
+                        <p class="subtitle is-6"></p>
+                    </div>
+                </div>
+
+                <div class="content">
+                    <p>description of job</p>
+                    <a href="">Apply here</a>
+                    <br>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
-    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-    <script src ="assets/plant.js"></script>
+    <!-- <script src="lodash.js"></script> -->
+    <script src="assets/plant.js"></script>
 </body>
+
 </html>
