--- a/plant.html
+++ b/plant.html
@@ -15,7 +15,30 @@
         <h1>Finding a Job is hard... why not make it fun?</h1>
 
     </header>
-    <div id = "job-options">
+    <div
+    <div id = "job-options" class = "columns is-tablet is-multiline is-4">
+        <div class="card column is-3">
+            <div class="card-image">
+                <figure class="image is-4by3">
+                    <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                </figure>
+            </div>
+            <div class="card-content">
+                <div class="media">
+
+                    <div class="media-content">
+                        <h3 class="title is-4 has-text-centered">Job Title</h3>
+                        <p class="subtitle is-6"></p>
+                    </div>
+                </div>
+
+                <div class="content">
+                    <p>description of job</p>
+                    <a href="">Apply here</a>
+                    <br>
+                </div>
+            </div>
+        </div>
         <div class="card column is-3">
             <div class="card-image">
                 <figure class="image is-4by3">
@@ -41,8 +64,11 @@
     </div>
 
 
-    <!-- <script src="lodash.js"></script> -->
+    
     <script src="assets/plant.js"></script>
+    <script src="
+https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js
+"></script>
 </body>
 
 </html>
