--- a/mainindex.html
+++ b/mainindex.html
@@ -46,7 +46,7 @@
             <div class="dropdown is-hoverable">
                 <div class="dropdown-trigger">
                     <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
-                        <span>Color Choice</span>
+                        <span id="colorchoice">Color Choice</span>
                         <span class="icon is-small">
                             <i class="fas fa-angle-down" aria-hidden="true"></i>
                         </span>
