--- a/plant.html
+++ b/plant.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grow you Garden</title>
+    <title>Jobs and Jokes</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <!-- <link rel="stylesheet" href=".assets/plant.css" > -->
 
@@ -12,63 +12,17 @@
 
 <body>
     <header>
-        <h1>Finding a Job is hard... why not make it fun?</h1>
+        <h1 class = "has-text-centered">Finding a Job is hard... why not make it fun?</h1>
 
     </header>
-    <div
-    <div id = "job-options" class = "columns is-tablet is-multiline is-4">
-        <div class="card column is-3">
-            <div class="card-image">
-                <figure class="image is-4by3">
-                    <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-                </figure>
-            </div>
-            <div class="card-content">
-                <div class="media">
-
-                    <div class="media-content">
-                        <h3 class="title is-4 has-text-centered">Job Title</h3>
-                        <p class="subtitle is-6"></p>
-                    </div>
-                </div>
-
-                <div class="content">
-                    <p>description of job</p>
-                    <a href="">Apply here</a>
-                    <br>
-                </div>
-            </div>
-        </div>
-        <div class="card column is-3">
-            <div class="card-image">
-                <figure class="image is-4by3">
-                    <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-                </figure>
-            </div>
-            <div class="card-content">
-                <div class="media">
-
-                    <div class="media-content">
-                        <h3 class="title is-4 has-text-centered">Job Title</h3>
-                        <p class="subtitle is-6"></p>
-                    </div>
-                </div>
-
-                <div class="content">
-                    <p>description of job</p>
-                    <a href="">Apply here</a>
-                    <br>
-                </div>
-            </div>
-        </div>
+    <div id = "job-options" class = "m-4 columns is-tablet is-multiline is-4">
+        <button class="button is-large is-fullwidth is-loading is-centered">Loading</button>
     </div>
 
 
     
     <script src="assets/plant.js"></script>
-    <script src="
-https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js
-"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 </body>
 
 </html>
