--- a/index.html
+++ b/index.html
@@ -5,62 +5,41 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Recipes</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-</head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
+    <link rel="stylesheet" href="./Recipe Page/style.css" />
+    <!DOCTYPE html>
+    <html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./style.css" />
+
+    </head>
+
 
 <body>
-    <section class="section">
-        <div class="container">
-            <h1 class="title">
-                Recipes <strong>Bulma</strong>!
-            </h1>
-            <p class="subtitle">
-                Subtitle
-            </p>
-        </div>
-        <div class="columns is-multiline is-mobile is-centered block">
 
-            <div class="has-background-primary column is-one-quarter" id="all-columns">
-
-                <code>is-one-quarter</code>
-                <p>info here</p>
-            </div>
-            <div class="column is-one-quarter">
-                <code>is-one-quarter</code>
-            </div>
-            <div class="column is-one-quarter">
-                <code>is-one-quarter</code>
-
-            </div>
-            <div class="column is-one-quarter">
-                <code>is-one-quarter</code>
-            </div>
-            <div class="column is-one-quarter">
-                <code>is-half</code>
-            </div>
-            <div class="column is-one-quarter">
-                <code>is-one-quarter</code>
-            </div>
-            <div class="column is-one-quarter">
-                <code>is-one-quarter</code>
-            </div>
-            <div class="column is-one-quarter">
-                <code>is-one-quarter</code>
-            </div>
-
-        </div>
-        </div>
+    <div class="card">
+        <div class="card-image">
 
 
+            <div class="card-content">
+                <div class="media">
+                    <div class="media-left">
+                        <figure class="image is-12x12">
+                            <img id="pic" src="./assets/nov18_16_882299664.jpg" alt="Placeholder image">
+                        </figure>
+                    </div>
+                    <div class="media-content">
+                        <p class="title is-4">Joke Prompt</p>
+                        <button id="joke-button">Joke Prompt</button>
+                    </div>
+                </div>
+                </script>
+                <script src="./lodash.js"></script>
+                <script src="./script.js"></script>
 
-
-    </section>
-    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-
-
-    <script src="./Recipe Page/script.js"></script>
-
-</body>
 
 </html>
