document location change when submit button is clicked, conditions for submiting page

--- a/mainindex.html
+++ b/mainindex.html
@@ -86,7 +86,7 @@
                 <!-- <div class="control"> -->
                     <!-- <input class="button is-info" id="" type="submit" value="Submit"> -->
                 <!-- </div> -->
-                <input class="button is-info" id="" type="submit" value="Submit">
+                <input class="button is-info" id="citystate-btn" type="submit" value="Submit">
             <!-- </div> -->
         </div>
     </section>
