--- a/index.html
+++ b/index.html
@@ -6,40 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Recipes</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
-    <link rel="stylesheet" href="./Recipe Page/style.css" />
+    <link rel="stylesheet" href="Joke/style.css" />
     <!DOCTYPE html>
     <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./style.css" />
 
-    </head>
+
+</head>
 
 
 <body>
 
-    <div class="card">
-        <div class="card-image">
+    <div id="joke-start" class="card">
 
 
-            <div class="card-content">
-                <div class="media">
-                    <div class="media-left">
-                        <figure class="image is-12x12">
-                            <img id="pic" src="./assets/nov18_16_882299664.jpg" alt="Placeholder image">
-                        </figure>
-                    </div>
-                    <div class="media-content">
-                        <p class="title is-4">Joke Prompt</p>
-                        <button id="joke-button">Joke Prompt</button>
-                    </div>
-                </div>
-                </script>
-                <script src="./lodash.js"></script>
-                <script src="./script.js"></script>
 
+
+
+
+        <h1 id="joke-start" class="title is-4"></h1>
+    </div>
+
+
+
+
+
+
+    <script src="./Joke/script.js"></script>
+
+</body>
 
 </html>
