colors now assigned to jobs in if statements job query working

--- a/mainindex.html
+++ b/mainindex.html
@@ -55,18 +55,10 @@
 
                 <div class="dropdown-menu" id="dropdown-menu" role="menu">
                     <div class="dropdown-content">
-                        <a href="#" class="dropdown-item">
-                            Orange
-                        </a>
-                        <a href="#" class="dropdown-item">
-                            Gold
-                        </a>
-                        <a href="#" class="dropdown-item">
-                            Green
-                        </a>
-                        <a href="#" class="dropdown-item">
-                            Blue
-                        </a>
+                        <a href="#" class="dropdown-item">Orange</a>
+                        <a href="#" class="dropdown-item">Gold</a>
+                        <a href="#" class="dropdown-item">Green</a>
+                        <a href="#" class="dropdown-item">Blue</a>
                     </div>
                 </div>
             </div>
