--- a/index.html
+++ b/index.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Recipes</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
-    <link rel="stylesheet" href="Joke/style.css" />
-    <!DOCTYPE html>
-    <html lang="en">
-
-
-
+    <link rel="stylesheet" href="./Assets/style.css" />
+    <title>Document</title>
 </head>
 
-
 <body>
+    <section class="section">
+        <div class="container">
+            <h1 class="is-size-1 has-text-danger has-text-centered">
+                Finding a job is hard... why not make it fun?
+            </h1>
 
-    <div id="joke-start" class="card">
+            <button id="button" class="button is-danger is-rounded">PUSH TO LAUGH!</button>
+            <P id="joke-start" class="has-text-primary is-size-3 has-text-centered"></P>
+
+        </div>
+
+        <br>
+        <br>
+
+        <div id="job-options" class="m-4 columns is-tablet is-multiline is-4">
+            <button class="button is-large is-fullwidth is-loading is-centered">Loading</button>
+        </div>
 
 
+    </section>
 
 
-
-
-        <h1 id="joke-start" class="title is-4"></h1>
-    </div>
-
-
-
-
-
-
-    <script src="./Joke/script.js"></script>
-
+    <script src="./Assets/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 </body>
+
+
+
+
+
+
+
+
 
 </html>
