added Gold personality descripton

--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
                 <div class="modal-card">
                     <header class="modal-card-head">
                         <p class="modal-card-title"></p>
-                        <button class="delete" aria-label="close"></button>
+                        <button class="modal-close is-large" aria-label="close"></button>
                     </header>
 
                     <section class="modal-card-body">
@@ -46,7 +46,13 @@
                                 Learn all about Gold.
                             </a>
                             <div id="q2" style="display:none;">
-                                TEXT WHAT U WILL SEE WHEN CLICKED HERE
+                                <pre>As a Gold personality type, you are likely highly organized and detail
+oriented. You might have a good memory for facts, statistics and 
+deadlines, which could make coworkers more likely to rely on you when 
+working on projects. This personality often makes smart financial 
+decisions and likes to have things balanced and on track. You 
+appreciate opportunities to take and display responsibilities, be a 
+service to others, demonstrate leadership and organize things or people.</pre>
                             </div>
 
                             <h1 class="has-text-success">Green</h1>
@@ -57,7 +63,7 @@
                                 TEXT WHAT U WILL SEE WHEN CLICKED HERE
                             </div>
 
-                            <h1 class="has-text-warning-light">Orange</h1>
+                            <h1 class="has-text-danger">Orange</h1>
                             <a href="javascript: void(0);" onClick="toggle('q4')">
                                 Learn all about Orange.
                             </a>
