added blue personality and edited citation

--- a/index2.html
+++ b/index2.html
@@ -38,7 +38,15 @@
                                 Learn all about Blue.
                             </a>
                             <div id="q1" style="display:none;">
-                                TEXT WHAT U WILL SEE WHEN CLICKED HERE
+                                <pre>If you're a blue personality, you may tend to be enthusiastic, 
+sympathetic, communicative, compassionate, idealistic, sincere and 
+imaginative. You value relationships and working closely with others. 
+Colleagues will likely appreciate your compassion and sincerity and 
+how quick you are to help during challenges. You appreciate 
+opportunities to demonstrate creativity, work with and mentor others 
+and communicate.</pre>
+For more info:
+<cite><a href="https://www.indeed.com/career-advice/finding-a-job/color-psychology-test">Indeed: How To Use Color Psychology Tests To Explore Career Options</a></cite>
                             </div>
 
                             <h1 class="has-text-warning">Gold</h1>
@@ -73,10 +81,10 @@ spontaneous, generous, optimistic, eager and bold. You enjoy the
 freedom and ability to be spontaneous. You will generally have a 
 positive outlook on life and high amounts of energy. In your career, 
 you may value offering creative solutions to workplace challenges. 
-You prefer flexibility in choosing how tasks are completed.
-More information can be found at
+You prefer flexibility in choosing how tasks are completed.</pre>
+For more info:
 <cite><a href="https://www.indeed.com/career-advice/finding-a-job/color-psychology-test">Indeed: How To Use Color Psychology Tests To Explore Career Options</a></cite>
-                                </pre>
+                            
                             </div>
                         </div>
                     </section>
