added green personality information and remaining citations

--- a/index2.html
+++ b/index2.html
@@ -61,6 +61,8 @@ working on projects. This personality often makes smart financial
 decisions and likes to have things balanced and on track. You 
 appreciate opportunities to take and display responsibilities, be a 
 service to others, demonstrate leadership and organize things or people.</pre>
+For more info:
+<cite><a href="https://www.indeed.com/career-advice/finding-a-job/color-psychology-test">Indeed: How To Use Color Psychology Tests To Explore Career Options</a></cite>
                             </div>
 
                             <h1 class="has-text-success">Green</h1>
@@ -68,7 +70,14 @@ service to others, demonstrate leadership and organize things or people.</pre>
                                 Learn all about Green.
                             </a>
                             <div id="q3" style="display:none;">
-                                TEXT WHAT U WILL SEE WHEN CLICKED HERE
+                                <pre>If you fit in the green category, you probably tend to be a 
+perfectionist and, analytical, conceptual, cool, calm, inventive and 
+logical. Your ability to see multiple sides of an issue can make you 
+adept at problem-solving, especially when working with a team. As a 
+green personality, you might highly value feedback because it gives 
+you a chance to develop your skills.</pre>
+For more info:
+<cite><a href="https://www.indeed.com/career-advice/finding-a-job/color-psychology-test">Indeed: How To Use Color Psychology Tests To Explore Career Options</a></cite>
                             </div>
 
                             <h1 class="has-text-danger">Orange</h1>
