some basic style changes

--- a/mainindex.html
+++ b/mainindex.html
@@ -28,10 +28,10 @@
     <section class="section">
         <div class="container">
             <h1 class="title">
-                Welcome
+                Finding a job is hard... why not make it fun?
             </h1>
             <p class="subtitle">
-                TAKE YOUR TIME & <strong>LOOK AROUND</strong>!
+                Pick a color and get <strong>dream job</strong> opportunities in your area based on your personality!
             </p>
         </div>
 
@@ -78,7 +78,7 @@
                 <!-- <div class="control"> -->
                     <!-- <input class="button is-info" id="" type="submit" value="Submit"> -->
                 <!-- </div> -->
-                <input class="button is-info" id="citystate-btn" type="submit" value="Submit">
+                <input class="button is-info" id="citystate-btn" type="submit" value="PUSH TO LAUGH">
             <!-- </div> -->
         </div>
     </section>
