--- a/plant.html
+++ b/plant.html
@@ -13,16 +13,16 @@
 <body>
     <section class="section">
         <div class="container">
-            <header class="columns is-centered">
+            <!-- <header class="columns is-centered">
                 <div class="columns is-half">
                     <h1 class="is-size-1 has-text-danger has-text-centered">Finding a job is hard... why not make it
                         fun?
                     </h1>
                 </div>
-            </header>
+            </header> -->
             <div class="columns is-centered">
                 <div class="columns is-half mt-2">
-                    <button id="button" class="button is-danger is-rounded is-centered">PUSH TO LAUGH!</button>
+                    <!-- <button id="button" class="button is-danger is-rounded is-centered">PUSH TO LAUGH!</button> -->
                     <p id="joke-start" class="has-text-primary is-size-3 has-text-centered"></p>
                 </div>
             </div>
