edited text in color type

--- a/index2.html
+++ b/index2.html
@@ -91,7 +91,7 @@ you a chance to develop your skills.</pre>
                                 Learn all about Orange.
                             </a>
                             <div id="q4" style="display:none;">
-                                <pre>If you're an orange personality, you likely tend to be witty, 
+                                <pre>If you are an orange personality, you likely tend to be witty, 
 spontaneous, generous, optimistic, eager and bold. You enjoy the 
 freedom and ability to be spontaneous. You will generally have a 
 positive outlook on life and high amounts of energy. In your career, 
