renaming of files

--- a/job.html
+++ b/job.html
@@ -127,7 +127,7 @@ You prefer flexibility in choosing how tasks are completed.</pre>
     </section>
 
 
-    <script src="assets/plant.js"></script>
+    <script src="assets/job.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 </body>
 
