--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Landing Page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <link rel="stylesheet" href="./landingassets/mainstyle.css">
 </head>
 
@@ -73,12 +76,12 @@
             <hr>
             <div class="field has-addons" id="location">
                 <!-- <div class="control"> -->
-                    <input class="input" id="citystate" type="text" placeholder="City + State">
-                </div>
-                <!-- <div class="control"> -->
-                    <!-- <input class="button is-info" id="" type="submit" value="Submit"> -->
-                <!-- </div> -->
-                <input class="button is-info" id="citystate-btn" type="submit" value="PUSH TO LAUGH">
+                <input class="input" id="citystate" type="text" placeholder="City + State">
+            </div>
+            <!-- <div class="control"> -->
+            <!-- <input class="button is-info" id="" type="submit" value="Submit"> -->
+            <!-- </div> -->
+            <input class="button" id="move-button" type="submit" value="PUSH TO LAUGH" />
             <!-- </div> -->
         </div>
     </section>
@@ -91,8 +94,9 @@
         </div>
     </footer>
 
-
-    <script src="./landingassets/mainscript.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"
+        integrity="sha256-XL2inqUJaslATFnHdJOi9GfQ60on8Wx1C2H8DYiN1xY=" crossorigin="anonymous"></script>
+    <script src="./assets/job.js"></script>
 </body>
 
 </html>
