--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="dropdown is-hoverable">
                 <div class="dropdown-trigger">
-                    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+                    <button class="button2" aria-haspopup="true" aria-controls="dropdown-menu">
                         <span id="colorchoice">Color Choice</span>
                         <span class="icon is-small">
                             <i class="fas fa-angle-down" aria-hidden="true"></i>
@@ -65,7 +65,7 @@
                     </div>
                 </div>
             </div>
-            <input class="button is-success is-full-height" id="colorinput" type="submit" value="Submit">
+            <input class="button is-full-height" id="colorinput" type="submit" value="Submit">
         </div>
 
         <br>
