landing page styling

--- a/index.html
+++ b/index.html
@@ -11,25 +11,13 @@
 </head>
 
 <body>
+    <section id = "top" class="section has-text-centered">
+        <img id="logo" src="./landingassets/colorful-careers-removebg.png" alt="logo">
+        <h1 class="navText"> </h1>
 
-    <header>
-        <nav class="navbar is-spaced" aria-label="main navigation">
-            <div class="navbar-brand">
-                <a class="navbar-item" href="#home">
-                    <img src="./landingassets/genericlogo.jpg" alt="logo">
-                </a>
-            </div>
-        </nav>
-    </header>
-
-    <!-- <div id="page-container">
-        <div id="content-wrap"> -->
-
-    <section class="section">
         <div class="container">
-            <h1 class="title">
-                Finding a job is hard... why not make it fun?
-            </h1>
+            <h1 class="title">Finding a job is hard...</h1>
+            <h2 class="title"> Why not make it fun? </h2>
             <p class="subtitle">
                 Pick a color and get <strong>dream job</strong> opportunities in your area based on your personality!
             </p>
@@ -73,21 +61,19 @@
             <hr>
             <div class="field has-addons" id="location">
                 <!-- <div class="control"> -->
-                    <input class="input" id="citystate" type="text" placeholder="City + State">
-                </div>
-                <!-- <div class="control"> -->
-                    <!-- <input class="button is-info" id="" type="submit" value="Submit"> -->
-                <!-- </div> -->
-                <input class="button is-info" id="citystate-btn" type="submit" value="PUSH TO LAUGH">
+                <input class="input" id="citystate" type="text" placeholder="City + State">
+            </div>
+            <!-- <div class="control"> -->
+            <!-- <input class="button is-info" id="" type="submit" value="Submit"> -->
+            <!-- </div> -->
+            <input class="button is-info" id="citystate-btn" type="submit" value="PUSH TO LAUGH">
             <!-- </div> -->
         </div>
     </section>
 
-    <footer class="footer">
+    <footer>
         <div class="content has-text-centered">
-            <p>
-                <strong>-.-.-.-</strong> 2023
-            </p>
+            <p> A web app by Shea, Kakazi & Laurie 2023</p>
         </div>
     </footer>
 
