debugged submit button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section id = "top" class="section has-text-centered">
+    <section id="top" class="section has-text-centered">
         <img id="logo" src="./landingassets/colorful-careers-removebg.png" alt="logo">
         <h1 class="navText"> </h1>
 
@@ -36,7 +36,7 @@
             </div>
             <div class="dropdown is-hoverable">
                 <div class="dropdown-trigger">
-                    <button class="button2" aria-haspopup="true" aria-controls="dropdown-menu">
+                    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
                         <span id="colorchoice">Color Choice</span>
                         <span class="icon is-small">
                             <i class="fas fa-angle-down" aria-hidden="true"></i>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </div>
-            <input class="button is-full-height" id="colorinput" type="submit" value="Submit">
+            <input class="button is-full-height" id="colorinput" type="submit" value="Submit"></input>
         </div>
 
         <br>
@@ -83,6 +83,7 @@
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"
         integrity="sha256-XL2inqUJaslATFnHdJOi9GfQ60on8Wx1C2H8DYiN1xY=" crossorigin="anonymous"></script>
     <script src="./assets/job.js"></script>
+    <script src="./landingassets/mainscript.js"></script>
 </body>
 
 </html>
