fixed buttons, linked files correctly

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="dropdown is-hoverable">
                 <div class="dropdown-trigger">
-                    <button class="button2" aria-haspopup="true" aria-controls="dropdown-menu">
+                    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
                         <span id="colorchoice">Color Choice</span>
                         <span class="icon is-small">
                             <i class="fas fa-angle-down" aria-hidden="true"></i>
@@ -53,7 +53,7 @@
                     </div>
                 </div>
             </div>
-            <input class="button is-full-height" id="colorinput" type="submit" value="Submit">
+            <input id="colorinput" class="button is-full-height is-info"  type="submit" value="SUBMIT">
         </div>
 
         <br>
@@ -69,7 +69,7 @@
             <!-- <div class="control"> -->
             <!-- <input class="button is-info" id="" type="submit" value="Submit"> -->
             <!-- </div> -->
-            <input class="button is-info" id="citystate-btn" type="submit" value="PUSH TO LAUGH">
+            <input id="citystate-btn" class="button is-info"  type="submit" value="PUSH TO LAUGH"/>
             <!-- </div> -->
         </div>
     </section>
@@ -82,7 +82,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"
         integrity="sha256-XL2inqUJaslATFnHdJOi9GfQ60on8Wx1C2H8DYiN1xY=" crossorigin="anonymous"></script>
-    <script src="./assets/job.js"></script>
+    <script src="./landingassets/mainscript.js"></script>
 </body>
 
 </html>
