changed API and background size

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"
         integrity="sha256-XL2inqUJaslATFnHdJOi9GfQ60on8Wx1C2H8DYiN1xY=" crossorigin="anonymous"></script>
-    <script src="./assets/job.js"></script>
+    <script src="./landingassets/mainscript.js"></script>
+
 </body>
 
 </html>
