--- a/job.html
+++ b/job.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <!-- <link rel="stylesheet" href=".assets/plant.css" > -->
+    <link rel="stylesheet" href=".assets/plant.css">
 
 </head>
 
@@ -29,7 +29,7 @@
             <div class="columns is-centered">
                 <div class="columns is-half mt-2">
                     <!-- <button id="button" class="button is-danger is-rounded is-centered">PUSH TO LAUGH!</button> -->
-                    <p id="joke-start" class="has-text-primary is-size-3 has-text-centered"></p>
+                    <p id="joke-start" class="is-size-3 has-text-centered"></p>
                 </div>
             </div>
 
