--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <!-- <div class="control"> -->
             <!-- <input class="button is-info" id="" type="submit" value="Submit"> -->
             <!-- </div> -->
+            <!-- <div></div> -->
             <input id="citystate-btn" class="button is-info" type="submit" value="PUSH TO LAUGH" />
             <!-- </div> -->
         </div>
