cleaned up some conventions, added refresh when modal is closed to allow scroll

--- a/job.html
+++ b/job.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jobs and Jokes</title>
+    <title>Colorful Careers</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <link rel="stylesheet" href=".assets/plant.css">
 
 </head>
 
@@ -123,12 +122,8 @@ You prefer flexibility in choosing how tasks are completed.</pre>
 
         </div>
     </div>
-    </div>
-    </section>
 
 
     <script src="assets/job.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 </body>
-
 </html>
