readme and comments

--- a/job.html
+++ b/job.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- button for modal to learn about chosen color -->
     <section class="section">
         <div class="container">
             <div class="columns is-centered">
@@ -22,19 +23,19 @@
         </div>
     </section>
 
-
+<!-- where joke will print -->
     <section class="section">
         <div class="container">
             <div class="columns is-centered">
                 <div class="columns is-half mt-2">
-                    <!-- <button id="button" class="button is-danger is-rounded is-centered">PUSH TO LAUGH!</button> -->
+                    -->
                     <p id="joke-start" class="is-size-3 has-text-centered"></p>
                 </div>
             </div>
 
         </div>
     </section>
-
+<!-- div for job cards to render -->
     <div id="job-options" class="columns is-tablet is-multiline is-6 is-centered">
         <button class="button is-large is-fullwidth is-loading is-centered">Loading</button>
     </div>
